check_output_3.txt
    Checking homelab_manager v0.1.0 (/Users/michal/Development/homelab_manager)
warning: unused import: `QuerySelect`
 --> src/db/devices.rs:7:27
  |
7 | use sea_orm::{QueryOrder, QuerySelect};
  |                           ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `Alias` and `Expr`
 --> src/db/devices.rs:8:26
  |
8 | use sea_orm::sea_query::{Alias, Expr};
  |                          ^^^^^  ^^^^

warning: unused imports: `networks` and `services`
 --> src/integrations/mod.rs:2:37
  |
2 | use crate::entities::{integrations, services, devices, interfaces, ip_addresses, networks};
  |                                     ^^^^^^^^                                     ^^^^^^^^

warning: unused import: `ModelTrait`
 --> src/integrations/mod.rs:4:77
  |
4 | use sea_orm::{ActiveModelTrait, EntityTrait, Set, ColumnTrait, QueryFilter, ModelTrait, QuerySelect};
  |                                                                             ^^^^^^^^^^

warning: unused import: `ipnetwork::IpNetwork`
 --> src/integrations/mod.rs:5:5
  |
5 | use ipnetwork::IpNetwork;
  |     ^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::str::FromStr`
   --> src/integrations/mod.rs:134:21
    |
134 |                 use std::str::FromStr;
    |                     ^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> src/models/types.rs:25:60
   |
24 |     fn try_get_by<I: sea_orm::ColIdx>(res: &QueryResult, idx: I) -> Result<Self, TryGetError> {
   |                   - found this type parameter
25 |         let val: mac_address::MacAddress = res.try_get("", idx).map_err(|e| {
   |                                                -------     ^^^ expected `&str`, found type parameter `I`
   |                                                |
   |                                                arguments to this method are incorrect
   |
   = note:   expected reference `&str`
           found type parameter `I`
note: method defined here
  --> /Users/michal/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/sea-orm-0.12.15/src/executor/query.rs:88:12
   |
88 |     pub fn try_get<T>(&self, pre: &str, col: &str) -> Result<T, DbErr>
   |            ^^^^^^^

error[E0308]: mismatched types
  --> src/models/types.rs:26:67
   |
26 |             TryGetError::DbErr(DbErr::Query(RuntimeErr::SqlxError(e)))
   |                                             --------------------- ^ expected `Error`, found `DbErr`
   |                                             |
   |                                             arguments to this enum variant are incorrect
   |
note: tuple variant defined here
  --> /Users/michal/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/sea-orm-0.12.15/src/error.rs:95:5
   |
95 |     SqlxError(#[source] sqlx::error::Error),
   |     ^^^^^^^^^

error[E0277]: the trait bound `mac_address::MacAddress: sea_orm::TryGetable` is not satisfied
  --> src/models/types.rs:25:48
   |
25 |         let val: mac_address::MacAddress = res.try_get("", idx).map_err(|e| {
   |                                                ^^^^^^^ the trait `TryGetableFromJson` is not implemented for `mac_address::MacAddress`
   |
   = help: the following other types implement trait `sea_orm::TryGetable`:
             Braced
             Hyphenated
             JsonValue
             NaiveDate
             NaiveDateTime
             NaiveTime
             OffsetDateTime
             PrimitiveDateTime
           and 53 others
   = note: required for `mac_address::MacAddress` to implement `sea_orm::TryGetable`
note: required by a bound in `QueryResult::try_get`
  --> /Users/michal/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/sea-orm-0.12.15/src/executor/query.rs:90:12
   |
88 |     pub fn try_get<T>(&self, pre: &str, col: &str) -> Result<T, DbErr>
   |            ------- required by a bound in this associated function
89 |     where
90 |         T: TryGetable,
   |            ^^^^^^^^^^ required by this bound in `QueryResult::try_get`

error[E0277]: the trait bound `SeaRc<dyn sea_orm::Iden>: From<&str>` is not satisfied
  --> src/models/types.rs:54:58
   |
54 |         sea_orm::sea_query::ColumnType::Custom("macaddr".into())
   |                                                          ^^^^ the trait `From<&str>` is not implemented for `SeaRc<dyn sea_orm::Iden>`
   |
   = note: required for `&str` to implement `Into<SeaRc<dyn sea_orm::Iden>>`

warning: unused import: `sea_orm::entity::prelude`
 --> src/models/types.rs:3:5
  |
3 | use sea_orm::entity::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `ColumnTrait`
 --> src/integrations/mod.rs:4:51
  |
4 | use sea_orm::{ActiveModelTrait, EntityTrait, Set, ColumnTrait, QueryFilter, ModelTrait, QuerySelect};
  |                                                   ^^^^^^^^^^^

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
warning: `homelab_manager` (lib) generated 8 warnings
error: could not compile `homelab_manager` (lib) due to 4 previous errors; 8 warnings emitted
